// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiNotificationEventMeta is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <span
      class="euiBadge euiBadge--hollow euiBadge--iconLeft"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props contextMenuItems  are rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <span
      data-euiicon-type="logoCloud"
    />
    <span
      class="euiBadge euiBadge--hollow euiBadge--iconLeft"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
    <div
      class="euiPopover euiPopover--anchorLeftUp"
    >
      <div
        class="euiPopover__anchor"
      >
        <button
          aria-label="Open menu"
          class="euiButtonIcon euiButtonIcon--subdued euiNotificationEventMeta__secondaryAction"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            data-euiicon-type="boxesVertical"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props healthStatus  is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <span
      class="euiBadge euiBadge--iconLeft"
      style="background-color:#6dccb1;color:#000"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props isRead  is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <button
      aria-label="Mark as read"
      class="euiButtonIcon euiButtonIcon--primary euiNotificationEventReadButton euiNotificationEventReadButton--isRead"
      data-test-subj="notificationEventReadButton"
      disabled=""
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        data-euiicon-type="dot"
      />
    </button>
    <span
      class="euiBadge euiBadge--hollow euiBadge--iconLeft"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props logoCloud  is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <span
      data-euiicon-type="logoCloud"
    />
    <span
      class="euiBadge euiBadge--hollow euiBadge--iconLeft"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
  </div>
</div>
`;

exports[`EuiNotificationEventMeta props severity is rendered 1`] = `
<div
  class="euiNotificationEventMeta"
>
  <div>
    <span
      class="euiBadge euiBadge--hollow euiBadge--iconLeft"
    >
      <span
        class="euiBadge__content"
      >
        <span
          class="euiBadge__text"
        >
          Alert: severity
        </span>
      </span>
    </span>
  </div>
  <div>
    <span
      class="euiNotificationEventMeta__time"
    >
      2 min ago
    </span>
  </div>
</div>
`;
